tests/NormalTests/paczka1/fuzzy1/25829616.err
Error in line 2: EcitbOY1i A120 44,2
Error in line 14: A483 A483 21,26
Error in line 9: 8W1bjm5 A120 81,2
Error in line 10: B06iy3108Vw S732 47,1
Error in line 13: A483 A120 88,2
Error in line 25: A483 A483 94,2
Error in line 29: k0vrvdwTB3 A483 48,5
Error in line 31: k0vrvdwTB3 A120 51,0
